@@ -221,7 +221,7 @@ public class WarpTransformClient {
         LOG.info("buildTransformsForClusters: for z {}, found {} connected tile sets with sizes {}",
                  z, clusters.size(), clusters.getClusterSizes());
 
-        final Set<String> largestCluster = connectedTileSets.get(0);
+        final Set<String> largestCluster = connectedTileSets.getFirst();
         final int maxSmallClusterSize = tileClusterParameters.getEffectiveMaxSmallClusterSize(largestCluster.size());
 
         final int tileCountBeforeRemoval = montageTiles.getTileCount();
